# py2to3-example-project

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  PLAN.md  README.md  README.txt  create_structure.sh  pyproject.toml  requirements.txt  setup.py
.lint-plugins/: __init__.py  flake8_phase1_checker.py  flake8_phase2_checker.py  flake8_py2_checker.py  py2_idioms_checker.py  pylintrc-phase1  pylintrc-phase2  pylintrc-phase3  pylintrc-phase4  setup.cfg  setup.py
config/: logging.conf  platform.ini
data/: sample_records.json  scada_config.xml  sensor_readings.csv
handoff-prompts/: phase0-kickoff-prompt.md  phase1-handoff-prompt.md  phase2-handoff-prompt.md  phase3-implementation-plan.md  phase4-handoff-prompt.md
migration-analysis/: LINT_RULES_SUMMARY.md  build-system-report.json  build-system-report.md  bytes-str-boundaries.json  c-extension-report.json  conversion-plan.json  conversion-plan.md  conversion-report.json  critical-path.json  data-layer-report.md  data-migration-plan.json  dependency-compatibility.json  dependency-graph.html  dependency-graph.json  encoding-map.json  future-imports-report.json  future-imports-report.md  gate-check-report.json  gate-check-report.md  lint-baseline.json  lint-baseline.md  lint-rules-documentation.md  lint-rules-report.json  migration-order.json  migration-report.md  migration-state.json  phase2-evidence.json  phase2-gate-check-report.json  phase2-gate-check-report.md  phase3-gate-check-report.json  phase3-gate-check-report.md  phase3-handoff-prompt.md  phase4-gate-check-report.json  phase4-gate-check-report.md  (+6 more)
(+84 files in other folders)
